--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722482.md#1" target="_blank">反送中持续半年 陈方安生公开批评林郑</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722482.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo_2019-12-14_15-25-33-150x120.jpg" align ="left"></a>香港反送中运动已经持续半年了，前政务司司长陈方安生认为，香港目前的局面是政府咎由自取。她认为，那些抗争者捍卫了香港人生活方式和核心价值。
+
+12月13日，陈方安生以公民实践培育基金董事的身份，在《反送中事件——民间民情报告》最终篇的发布会上致辞。她批林郑政府不下一次把香港人感受切肤之痛的事情弄得一团糟，当权者拒绝聆听民意，只顾取悦北京主子。
+
+她认为.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 6:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721587.md#1" target="_blank">一张表看懂中美第一阶段贸易协议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-150x120.jpg" align ="left"></a>中、美周五（12月13日）达成第一阶段贸易协议，虽然各自发表的协议框架保持高度一致，但在具体细节上仍存大大小小的差异。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722295.md#1" target="_blank">【拍案惊奇】港人如何取胜？美中协议有雷区</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722295.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019121433-150x120.jpg" align ="left"></a>今天呢，我们出一期新拍专题，与以往不同的是，今天包含两个专题栏目：首先还是有关香港，介绍两位美国资深专家，对香港问题的深入分析，来聊聊香港人抗争的走向。然后，我们会介绍美中达成的第一阶段贸易协议，以及接下来要面对的棘手问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722237.md#1" target="_blank">香港抗争未平息 习近平将访问澳门引关注</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/1701170854291758-150x120.jpg" align ="left"></a>中共官媒14日发布消息称，习近平将在12月18日至20日到澳门访问。有分析认为这是中共在香港民众持续抗议，中共镇压未果的情况下，中共希望让澳门替代香港的企图。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721781.md#1" target="_blank">德国两大执政党联手 拟立法封杀华为</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/5G-150x120.jpg" align ="left"></a>德国大联合政府两大执政党——基民/基社联盟（CDU/CSU）和社民党（SPD）联合发起提案，要求设立5G建设新标准，排除那些“受制于政府、缺乏法律监督、有被操控或间谍刺探危险”的制造商。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 11:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721234.md#1" target="_blank">中央经济工作会议无新意 分析：中共难稳就业</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721234.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1201040316162320-600x400-150x120.jpg" align ="left"></a>为期3天的中共中央经济工作会议结束。中共官方发布了会议公告称，经济下行压力加大，并再次强调要“六稳”。此次会议公告了无新意，而民企近来遭中共严重打压，分析认为，中共未来难“稳”就业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721543.md#1" target="_blank">传香港TVB月底裁员近千 节目制作部占大头</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721543.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/190714080601100311-150x120.jpg" align ="left"></a>被称为香港“红媒之首”的无线台（TVB），因为在香港“反送中”“反极权”运动中的新闻报道偏颇，甚至刻意抹黑抗争民众，引发市民罢看、客户抵制，其收视率和广告收入不断下跌。现传出管理层为缩减开支，本月底将裁员近千，其中制作部将成重灾区。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721891.md#1" target="_blank">深圳宝安发生多起骚扰法轮功学员事件</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721891.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-67-600x370-600x370-1-150x120.jpg" align ="left"></a>一年多来，深圳市宝安区发生多起电话骚扰、跟踪、拍照，非法搜查法轮功学员家等迫害事件，尤其是在中共“十一”大庆等所谓维稳节假日。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 9:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721940.md#1" target="_blank">莱特希泽：美中或明年1月签协议 川习不出席</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MY8OG-150x120.jpg" align ="left"></a>美国贸易代表罗伯特·莱特希泽（Robert Lighthizer）周五（12月13日）告诉记者，美中希望在明年1月的第一个星期签署第一阶段贸易协议。他透露，协议将不会由川普（特朗普）总统和习近平主席签署。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 6:36 AM							</td></tr>
@@ -17,17 +27,11 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721506.md#1" target="_blank">中共拟推南水北调二期工程 批评声浪再起</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1407040947282664-150x120.jpg" align ="left"></a>12月12日是中共南水北调东线和中线一期工程完工的第五个年头，当天中共水利部官员称二线工程的规划将于今年完成，引发批评，南水北调工程被指浪费资源、破坏环境、祸国殃民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721510.md#1" target="_blank">中共基因编辑打造“超级猪” 学界痛批</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721510.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/583d10679d180759dd854d7b4f86acca-150x120.jpg" align ="left"></a>中共正在基因编辑领域里“赶超世界”。有报导说，中国科学家不仅利用基因编辑打造“超级猪”，以摆脱非洲猪瘟的重创，还利用基因编辑在猪身上培育“即用型人体器官”，其做法常常冲击医学科学界伦理而遭批评。科学界人士表示，中共抛弃道德发展科技，正在末路狂奔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721507.md#1" target="_blank">陈光诚：中共所为人神共怒 历史关键时刻到来</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191211090850100699-150x120.jpg" align ="left"></a>12月10日是国际人权日，“全球反迫害制止中共暴行、声援退党大潮”研讨会在美国国会举行。维权律师陈光诚说，中共的所作所为令人神共怒，目前是关键的历史时刻。“中共已经到了遭劫在数、在数难逃的这样一个境地，可以说，它的末日马上就要来到了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 1:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721473.md#1" target="_blank">不舍10万手术费 48岁河南男子出走离世</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-1-150x120.gif" align ="left"></a>河南焦作48岁的男子韦某某查出冠心病，听说治疗费要10万后，不想拖累家人，偷偷从医院离开。苦寻数天后家人终于找到他，但他已离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 1:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721541.md#1" target="_blank">华为出局 挪威电信选择爱立信提供5G服务</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Telenor_Fornebu-150x120.jpg" align ="left"></a>挪威电信（Telenor Group）周五（12月13日）表示，该公司选择瑞典爱立信作为其5G电信网路的主要技术供应商。挪威电信在与华为进行10年的4G合作后，将逐渐淘汰华为设备。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 1:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721362.md#1" target="_blank">美方贸易声明 强调双方达成强有力执行机制</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/GettyImages-909341704-2-150x120.jpg" align ="left"></a>美国贸易代表办公室（USTR）周五（12月13日）宣布声明，美中双方就第一阶段贸易协议达成了一项历史性的、且可执行性的协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721141.md#1" target="_blank">2020台湾大选14日起跑 中选会拼开票日</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a2259b25f9d7f9114afc5583a97f5217-150x120.jpg" align ="left"></a>中选会13日举行第15任总统副总统竞选活动起跑暨电脑计票及资安记者会，公告第15任总统副总统选举候选人名单。第15任总统副总统选举共有3组候选人，宋楚瑜及余湘、韩国瑜及张善政、蔡英文及赖清德，竞选活动期间12月14日起至109年1月10日止，为期28日，每日竞选活动时间自上午7时起至下午10时止。主委李进勇表示，目标投票日当天晚上10点完成计票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715883.md#1" target="_blank">中共“奴工”买卖的罪恶（1）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715883.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2008-12-27-shenyangjails-04-150x120.jpg" align ="left"></a>1999年7月，中共江泽民集团对法轮功发动了灭绝性的迫害，实施“名誉上搞臭、经济上截断、肉体上消灭”的政策。法轮功学员被任意抓捕、非法劳教，被当做奴隶买卖，强迫高强度做奴工，还遭酷刑折磨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721469.md#1" target="_blank">【快讯】川普：已征的25%对华关税不变 其余减半</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/15c9f8864d19e1f7_ttl7dayj5A_07-150x120.jpg" align ="left"></a>美东时间周五（12月13日）上午11点，在中方新闻会公布关于美中贸易谈判中方声明的同时，美国总统川普（特朗普）发推文说：“我们已经同意与中方达成一项非常大的第一阶段协议。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721312.md#1" target="_blank">美中达成第一阶段协议 中方深夜召开新闻会</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-150x120.jpg" align ="left"></a>周四（12月12日），美媒报导称，川普已经批准与中方达成的一份“原则上协议”。北京则同意购买大量美国农产品，并做出其它让步，作为交换，美方将暂停12月15日生效的新一轮对华关税，同时削减一些已经加征的关税。白宫和中方计划于周五公布结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721205.md#1" target="_blank">湖北以建高铁为名强拆民房 赔偿过低村民不满</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721205.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_20190401_111021-150x120.jpg" align ="left"></a>湖北襄阳市襄州区东津镇简坡村遭建高铁为名强拆，赔偿过低，村民敢怒不敢言，最后一家被强拆的胡先生向大纪元记者讲述了大致经过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720718.md#1" target="_blank">川普祝贺约翰逊胜选 期待英美大笔贸易协议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188198531-150x120.jpg" align ="left"></a>美国总统川普（特朗普）庆祝约翰逊的压倒性胜利，他说这会引发英美之间“大笔”贸易协定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722469.md#1" target="_blank">山东一动物园维修工疑被机器挤压身亡</a><br></h3>12月13日，山东济南市天桥区的济南动物园一名维修工人疑似被游乐场机器挤压，当场身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722439.md#1" target="_blank">云南高院原院长被处分 曾涉孙小果案</a><br></h3>日前，云南高级法院原党组书记、院长赵仕杰被留党察看一年处分，按二级巡视员确定其退休待遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722193.md#1" target="_blank">每日三退声明精选（2019/12/13）</a><br></h3>在youtube上看到了共党迫害善良的人，使我感到愤怒，可又无能为力。我小时加入过少先队员，现今知晓善恶自愿退出少先队。虽然我的举动微不足道，希望可以在退党、退团、退队的人数中加上我一个。永远支持真善忍，愿所有人早日知道真相，并脱离魔鬼的掌控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721813.md#1" target="_blank">热依扎为角色谎称会骑马 又为圆谎落下病根</a><br></h3>因出演电视剧《甄嬛传》中的“宁贵人”一角走红的新疆女星热依扎，15岁时因完美身材成为模特而出道。大学毕业后开始拍戏的她，因担心拿不到角色而对导演谎称会骑马。而为了“圆谎”，她吃尽了苦头，过度的训练，让她落下了病根。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721169.md#1" target="_blank">【珍言真语】专访刘慧卿：林郑是千古罪人</a><br></h3>香港动荡6个月了。前立法会议员、民主党主席刘慧卿认为，这都是林郑月娥造成的。希望中央政府诺守“中英联合声明”与《基本法》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720853.md#1" target="_blank">台《情工法》三读 间谍最重无期徒刑终身追诉</a><br></h3>立法院院会13日三读通过《国家情报工作法》修正案，除了把窃取营业秘密资讯纳入侦防工作重点之外，也大幅提高刑责，若替外国势力或境外敌对势力以刺探、搜集、窃取、泄露、交付情报来源，将从7年以上有期徒刑调整为无期徒刑或10年以上有期徒刑，并可终身追诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721310.md#1" target="_blank">【世界十字路口】会客室：债务风暴席卷中国</a><br></h3>曾为世界500强企业之一的“天津物产集团”，12月12日宣布完成11亿美元的债务重整，相当于宣告债券违约，引发国际媒体竞相关注中国债务危机。中国债务问题会不会对香港、台湾等地带来影响？中国地方政府的债务问题又有多严峻？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
