--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -9,6 +9,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726358.md#1" target="_blank">华日贸谈报导不实 遭美两部门罕见批评</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-16-at-11.31.30-AM-150x120.png" align ="left"></a>中美双方上周宣布达成原则性的第一阶段贸易协议，美国政府周日（12月15日）罕见刊发声明批评、引述消息人士不实报导的美媒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank">汉翔17日与洛马签约 推台为F16亚太维修中心</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4f7d88f4e9fcd478f0a728abf37a0da5-150x120.jpg" align ="left"></a>中华民国空军正将现有144架F-16A/B升级为F-16V（Block20），并向美国采购66架全新F-16V（Block70），合计达到210架，成为亚太国家当中拥有F-16战机数量最多的国家；汉翔17日将与美商洛克希德马丁公司签署策略联盟合作协议，推动台湾成立F-16战机的亚太维修中心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725983.md#1" target="_blank">中共打压波特王 蔡英文：台湾社会难接受</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725983.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/015ef1b5590fd87cffa9b6ebfb7fb932-150x120.png" align ="left"></a>网路名人“波特王”与中华民国总统蔡英文拍片遭中国厂商解约，总统蔡英文16日表示遗憾，她强调这件事是台湾社会难以接受的事情，台湾是自由民主的社会，可以自由创作，称台湾总统也是非常自然的事情，若连这样都不行，与台湾社会所珍惜的自由民主价值是很大的违背。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank">日本无印良品输官司 专家提醒投资中国风险</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1151e1e2e3968_ttl7daylru_DSC_04851-150x120.jpg" align ="left"></a>日本无印良品遭中国山寨版无印良品状告侵权，无印良品上诉失败须赔偿原告（北京无印良品）人民币62.6万元。台湾智财专家提醒，在大陆经商智慧财产和营业秘密没有保障，投资中国需注意风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank">猪肉催生河南新首富 身家超千亿</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/6b9e95008a2b06c4626f19d9e5e56c0a-150x120.jpg" align ="left"></a>受非洲猪瘟疫情影响，中国大陆猪肉价格暴涨，秦英林凭借牧原股份的股价大涨，不仅在2019年晋升河南首富，其家族财富更是在福布斯内地富豪榜上，反超王健林、李彦宏、雷军等众多商界大佬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726050.md#1" target="_blank">【十字路口】台大选倒计时 这些暗招或出现</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726050.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e0d8d1b3dfd46e_ttl7dayXPE_20191216-____-DJY-150x120.jpg" align ="left"></a>根据以往经验，往往越靠近投票日，越可能出现一些选举“暗招”，或者台湾人说的“奥步”，来试图扰乱选情、干预选举结果。特别是今年中共对台湾大选的渗透干预相当全面而且用力，所以虽然现在三组总统候选人的民调差距相当大，但是台湾的朋友还是不能掉以轻心，不能排除这些选举“奥步”可能会发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723774.md#1" target="_blank">莫雷第二？英超球星声援新疆 央视停转播惹议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1192154826-150x120.jpg" align ="left"></a>星期五(12月13日)德国足球明星梅苏特·厄齐尔（Mesut ?zil）在社交媒体发声，抗议中共迫害新家维吾尔人，这随机引起了中共媒体的“口诛笔伐”，对其的“愤怒声讨”不亚于针对NBA教练莫雷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:08 PM							</td></tr>
@@ -30,7 +31,6 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank">林郑月娥赴京述职地点突改变 引揣测</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/36-1-150x120.jpg" align ="left"></a>香港特首林郑月娥日前进京述职。今天（12月16日），林郑分别与李克强、习近平见面，汇报香港的最新情况。有报导说，林郑今天的述职地点，由此前的中南海紫光阁改为人民大会堂，引外界揣测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank">“辱母杀人案”苏银霞出狱 49岁头发全白</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/6a03dc1766fd694f949bbd8833d26a2c-150x120.jpg" align ="left"></a>山东“辱母杀人案”的母亲苏银霞，坐牢3年后，于12月14日刑满释放。现年49岁的苏银霞头发全白了。她说，在监狱特别愁，心理压力特别大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank">遭中共疯狂仿制武器 俄因未申请专利而无奈</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/03/1203071717381119-150x120.jpg" align ="left"></a>中共不断仿制武器让俄罗斯伤透脑筋。近日，有俄罗斯军工领域负责人表示，从航空发动机到战斗机，再到防空导弹，中共无所不仿，但由于没有申请国际专利，俄罗斯对此几乎束手无策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:27 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank">日本无印良品输官司 专家提醒投资中国风险</a><br></h3>日本无印良品遭中国山寨版无印良品状告侵权，无印良品上诉失败须赔偿原告（北京无印良品）人民币62.6万元。台湾智财专家提醒，在大陆经商智慧财产和营业秘密没有保障，投资中国需注意风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725870.md#1" target="_blank">河南高速现多起事故 5人惊慌逃生坠桥死亡</a><br></h3>12月15日晚上7时许，因雨雪天气，河南省三门峡市连霍高速K795连续发生多起交通事故，5名司乘人员惊慌中逃生，翻越墙式护栏意外坠桥死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 7:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725738.md#1" target="_blank">中共军工专家李守泽突然去世 引关注</a><br></h3>日前，现年58岁的中共军工企业、中航飞机股份有限公司（下称中航飞机）副总经理李守泽去世，引外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725328.md#1" target="_blank">湖南新晃县一中操场埋尸案明日开审</a><br></h3>曾轰动一时的湖南新晃县一中“操场埋尸案”，明日（12月17日）将公开庭审。嫌疑人杜少平被指控犯故意杀人罪、故意伤害罪、寻衅滋事罪、非法拘禁罪、聚众斗殴罪、强迫交易罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:54 PM							</td></tr>
